@@ -1,9 +1,9 @@
 {
-  "timestamp" : "2022-08-31T08:07:09Z",
+  "timestamp" : "2022-09-01T00:28:25Z",
   "count_outdated" : 49,
   "uniques_outdated" : 42,
-  "count" : 74,
-  "uniques" : 61,
+  "count" : 75,
+  "uniques" : 62,
   "clones" : [
     {
       "timestamp": "2022-08-18T00:00:00Z",
@@ -35,10 +35,10 @@
     },
     {
       "timestamp": "2022-08-31T00:00:00Z",
-      "count": 5,
-      "count_minmax": [ 5, 5 ],
-      "uniques": 4,
-      "uniques_minmax": [ 4, 4 ]
+      "count": 6,
+      "count_minmax": [ 5, 6 ],
+      "uniques": 5,
+      "uniques_minmax": [ 4, 5 ]
     }
   ]
 }
