@@ -1,6 +1,6 @@
 {
-  "count": 25,
-  "uniques": 13,
+  "count": 26,
+  "uniques": 14,
   "clones": [
     {
       "timestamp": "2022-08-18T00:00:00Z",
@@ -24,8 +24,8 @@
     },
     {
       "timestamp": "2022-08-31T00:00:00Z",
-      "count": 5,
-      "uniques": 4
+      "count": 6,
+      "uniques": 5
     }
   ]
 }
