@@ -1,3 +1,11 @@
+2022-09-01T00:28:25Z:
+* notice: GitHub Actions Run URL: https://github.com/andry81-devops/andry81-devops/actions/runs/2967996206
+* notice: last 14d: unq all: 14 26
+* notice: prev accum: outdated-unq outdated-all / unq all: 42 49 / 61 74
+* notice: next accum: outdated-unq outdated-all / unq all: 42 49 / 62 75
+* notice: prev exec diff / last date diff / accum: unq all: +1 +1 -0 -0 / +5 +6 -0 -0 / 5 6
+* notice: removed / changed dates: [] / [2022-08-31]
+
 2022-08-31T08:07:09Z:
 * notice: GitHub Actions Run URL: https://github.com/andry81-devops/andry81-devops/actions/runs/2962255814
 * notice: last 14d: unq all: 13 25
